--- a/admin/post-add.html
+++ b/admin/post-add.html
@@ -79,7 +79,7 @@
 
   <div class="aside">
     <div class="profile">
-      <img class="avatar" src="../uploads/avatar.jpg">
+      <img class="avatar" src="../public/uploads/avatar.jpg">
       <h3 class="name">布头儿</h3>
     </div>
     <ul class="nav">
