--- a/admin/slides.html
+++ b/admin/slides.html
@@ -69,7 +69,7 @@
             <tbody>
               <tr>
                 <td class="text-center"><input type="checkbox"></td>
-                <td class="text-center"><img class="slide" src="../uploads/slide_1.jpg"></td>
+                <td class="text-center"><img class="slide" src="../public/uploads/slide_1.jpg"></td>
                 <td>XIU功能演示</td>
                 <td>#</td>
                 <td class="text-center">
@@ -78,7 +78,7 @@
               </tr>
               <tr>
                 <td class="text-center"><input type="checkbox"></td>
-                <td class="text-center"><img class="slide" src="../uploads/slide_2.jpg"></td>
+                <td class="text-center"><img class="slide" src="../public/uploads/slide_2.jpg"></td>
                 <td>XIU功能演示</td>
                 <td>#</td>
                 <td class="text-center">
@@ -94,7 +94,7 @@
 
   <div class="aside">
     <div class="profile">
-      <img class="avatar" src="../uploads/avatar.jpg">
+      <img class="avatar" src="../public/uploads/avatar.jpg">
       <h3 class="name">布头儿</h3>
     </div>
     <ul class="nav">
