--- a/test.html
+++ b/test.html
@@ -18,19 +18,31 @@
     <![endif]-->
 </head>
 <body>
-<div>
-
-</div>
+<div id="movieList"></div>
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 <script>
     $(function () {
-            for(var i = 0;i<5;i++){
-                $('div').prepend('<span></span>');
-            }
-    })
+        $( "#movieList" ).html(
+            $( "#movieTemplate" ).render( movies )
+        );
+    });
+    var movies = [
+        { name: "The Red Violin", releaseYear: "1998" },
+        { name: "Eyes Wide Shut", releaseYear: "1999" },
+        { name: "The Inheritance", releaseYear: "1976" }
+    ];
+
 </script>
+<script src="public/vendors/jquery/jquery.js"></script>
+<script src="node_modules/jsrender/jsrender.min.js"></script>
+<script src="node_modules/art-template/lib/template-web.js"></script>
+<script id="movieTemplate" type="text/x-jsrender">
+    	<div>
+    		{{:#index+1}}: <b>{{>name}}</b> ({{>releaseYear}})
+    	</div>
+    </script>
 </body>
 </html>
