--- a/admin/comments.html
+++ b/admin/comments.html
@@ -64,7 +64,7 @@
             <td>2016/10/07</td>
             <td>未批准</td>
             <td class="text-center">
-              <a href="post-add.html" class="btn btn-info btn-xs">批准</a>
+              <a href="../views/post-add.html" class="btn btn-info btn-xs">批准</a>
               <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
             </td>
           </tr>
@@ -76,7 +76,7 @@
             <td>2016/10/07</td>
             <td>已批准</td>
             <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
+              <a href="../views/post-add.html" class="btn btn-warning btn-xs">驳回</a>
               <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
             </td>
           </tr>
@@ -88,7 +88,7 @@
             <td>2016/10/07</td>
             <td>已批准</td>
             <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
+              <a href="../views/post-add.html" class="btn btn-warning btn-xs">驳回</a>
               <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
             </td>
           </tr>
@@ -111,8 +111,8 @@
           <i class="fa fa-thumb-tack"></i>文章<i class="fa fa-angle-right"></i>
         </a>
         <ul id="menu-posts" class="collapse">
-          <li><a href="posts.html">所有文章</a></li>
-          <li><a href="post-add.html">写文章</a></li>
+          <li><a href="../views/posts.html">所有文章</a></li>
+          <li><a href="../views/post-add.html">写文章</a></li>
           <li><a href="categories.html">分类目录</a></li>
         </ul>
       </li>
