--- a/public/letao/src/index.html
+++ b/public/letao/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
     <title>Title</title>
+    <link rel="icon" href="http://192.168.0.101:5000/images/banner1.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="http://192.168.0.101:5000/images/banner1.png" type="image/x-icon" />
     <style>
         *{
             padding: 0;
@@ -17,4 +19,5 @@
 
     </div>
 </body>
+<!--<script type="text/javascript" src="bundle.js"></script>-->
 </html>
